# TeamProj

./: .coverage  README.md  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: python-tests.yml
config_lib/: __init__.py  parser.py  schema.py  validator.py
configlib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: config_example.yaml  schema_example.json
tests/: test_parser_schema.py  test_validation.py
