[project]
name = "configlib"
version = "0.1.0"
description = "Бібліотека для парсингу та валідації конфігураційних файлів за схемами"
authors = [
    { name="Ваше Ім'я", email="you@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "PyYAML>=6.0",
    "jsonschema>=4.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "pytest-cov"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=config_lib --cov-report=term-missing"
testpaths = [
    "tests"
]

[tool.coverage.run]
branch = true
source = ["config_lib"]

[tool.coverage.report]
show_missing = true
fail_under = 90